fix: edit sort API
